--- a/InterpretBank/InterpretBank/Booth/BoothWindow.xaml
+++ b/InterpretBank/InterpretBank/Booth/BoothWindow.xaml
@@ -87,7 +87,7 @@
                 <TextBlock Text="Database file path"
                            x:Name="FilepathLabel"
                            DockPanel.Dock="Top" />
-                <controls:ChooseFilepathControl DockPanel.Dock="Top"
+                <controls1:ChooseFilepathControl DockPanel.Dock="Top"
                                                 Margin="0 5 0 0"
                                                 AutomationProperties.LabeledBy="{Binding ElementName=FilepathLabel}"
                                                 Filepath="{Binding Filepath, Mode=TwoWay}"
